src/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: "Roboto", sans-serif;
	position: relative;
}

:root {
	--primary-blue: #0b3948;
}

html,
body,
#root {
	width: 100%;
	height: 100%;
	transition: all 0.25s;
	background-color: #a8e5ff;
}

h1 {
	font-size: 40px;
}

.full-width {
	width: 100%;
}

.flex-row {
	display: flex;
	flex-direction: row;
	column-gap: 1rem;
}

.flex-column {
	display: flex;
	flex-direction: column;
	row-gap: 1rem;
}

.column-reverse {
	flex-direction: column-reverse;
}

.space-between {
	justify-content: space-between;
}

.p-1 {
	padding: 1rem;
}

.p-2 {
	padding: 2rem;
}

.p-3 {
	padding: 3rem;
}

.pl-1 {
	padding-left: 1rem;
}

.pb-1 {
	padding-bottom: 1rem;
}

.pt-1 {
	padding-top: 1rem;
}

.gap-0 {
	gap: 0;
}

.gap-3 {
	gap: 3rem;
}

.center-content {
	display: flex;
	justify-content: center;
}

